# winmux

./: AGENTS.md  CONTEXT.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.omx/state/: update-check.json
.scratch/orca-shell/: PRD.md  tickets-m2.md  tickets-m3.md  tickets-m4.md  tickets-m5.md  tickets.md
.sisyphus/run-continuation/: ses_192624671ffeBkCjPwfp3h0Iba.json
docs/adr/: 0001-terminal-multiplexer-not-ade.md
docs/agents/: domain.md  triage-labels.md
src/: AGENTS.md  App.vue
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/daemon/: mod.rs
src-tauri/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/pty/: activity.rs  manager.rs  mod.rs
src/components/: BrowserView.vue  ConfirmModal.vue  ExplorerPanel.vue  FileViewer.vue  MenuBar.vue  PalettePopover.vue  PaneTabs.vue  QuickOpen.vue  SettingsModal.vue  SideBar.vue  SplitContainer.vue  StatusBar.vue  TabBar.vue  Terminal.vue
src/composables/: useConfirm.ts  useDragState.ts  useFocus.ts  useGlobalShortcuts.ts  useKeybindings.ts  useLayout.ts  usePalette.ts  usePrefixKey.ts  usePrefs.ts  useQuickOpen.ts  useResources.ts  useSessions.ts  useSettings.ts  useShellPanels.ts  useWorkspaces.ts
src/lib/: explorer-root.test.ts  explorer-root.ts  keybindings.ts  layout-types.ts  navigator.test.ts  navigator.ts  offline-icons.ts  path-insert.test.ts  path-insert.ts  persistence.ts  quick-open.test.ts  tauri.ts  (+9 more)
(+5 files in other folders)
